# resp_energy

./: .gitignore  README.md  pyproject.toml
src/resp/: __init__.py  config.py  constants.py  paths.py  resp_utils.py
src/resp/eplus/: campaign.py  campaign_interfaces.py  generate.py  interfaces.py  scripts.py
src/resp/geom/: begin.py  edges.py  interfaces.py  scripts.py
src/resp/readin/: access.py  interfaces.py  scripts.py
static/_01_inputs/weather/pa2024/: CA_PALO-ALTO-AP_724937_2001-20.DDY2  CA_PALO-ALTO-AP_724937_24.BINM  CA_PALO-ALTO-AP_724937_24.EPW  CA_PALO-ALTO-AP_724937_24.FIN4  source.md
static/_02_plans/processed/14433/: ext_edges.json  geom.json  in_edges.json
static/_02_plans/processed/14877/: ext_edges.json  geom.json  in_edges.json
static/_02_plans/processed/14926/: ext_edges.json  geom.json  in_edges.json
static/_02_plans/processed/16969/: ext_edges.json  geom.json  in_edges.json
static/_02_plans/processed/17054/: ext_edges.json  geom.json  in_edges.json
static/_02_plans/processed/3467/: ext_edges.json  geom.json  in_edges.json
static/_04_temp/resplan_subsets/: rp10.pkl
trials/: edges.py  geometry.py  readin.py
