[project]
name = "resp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "polymap",
    "replan2eplus",
    "svg2plan",
    "utils4plans",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
replan2eplus = { path = "../../replan2eplus" }
svg2plan = { path = "../../svg2plan" }
utils4plans = { path = "../../utils4plans" }
polymap = { path = "../../polymap" }
